# python-bindings

./: .codespellrc  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  SolverInterface.pxd  error_handling.py  mypy.ini  precice.pyx  pyproject.toml  setup.cfg  setup.py  tox.ini  versioneer.py
.github/workflows/: build-and-test-macos.yml  build-and-test.yml  build-docker.yml  build-env.yml  build-spack.yml  build-spack.yml.orig  check-pep8.yml  main.yml  pythonpublish.yml  release.yml  run-solverdummy.yml  run-tutorials.yml  test-pypi-publish.yml
changelog-entries/: 193.md  221.md  224.md  226.md  231.md  233.md
cyprecice/: .gitignore  Participant.pxd  SolverInterface.pxd  cyprecice.pxd  cyprecice.pyi  cyprecice.pyx
docs/: MigrationGuide.md  ReleaseGuide.md  build.sh  conf.py  index.rst  precice.rst
examples/solverdummy/: README.md  precice-config.xml  requirements.txt  solverdummy.py
precice/: .gitignore  SolverInterface.pxd  __init__.py  __init__.pyx  _version.py  precice.pxd  precice.pyx
solverdummy/: .gitignore  README.md  precice-config.xml  requirements.txt  solverdummy.py  solverdummy_parallel.py
spack/: README.md  ci-spack-pyprecice-deps-1804.dockerfile  ci-spack-pyprecice-deps-1804.dockerfile.orig  ci-spack-pyprecice-deps-2004.dockerfile  ci-spack-pyprecice-deps-2204.dockerfile  ci-spack-pyprecice-deps-2404.dockerfile  ci-spack-pyprecice-external-deps-1804.dockerfile  ci-spack-pyprecice-external-deps-2004.dockerfile  jinja-instantiate.py  package.py  spack-external.yaml  spack.yaml
spack/repo/: repo.yaml
test/: Participant.cpp  SolverInterface.cpp  test_bindings_module.py  test_bindings_module.pyx
tools/releasing/packaging/docker/: Dockerfile
